# project/routes/users.js
@@ -28,8 +28,11 @@ router.use(async function (req, res, next) {
 router.post("/favoritePlayers", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
-    // const player_id = req.body.playerId;
-    await users_utils.markPlayerAsFavorite(user_id, player_id);
+    const player_id = req.body.playerId;
+    console.log("----------------------------------");
+    console.log(user_id);
+    console.log(player_id);
+    await users_utils.markAsFavorite("favoritePlayers",user_id, player_id);
     res.status(201).send("The player successfully saved as favorite");
   } catch (error) {
     next(error);
@@ -42,12 +45,74 @@ router.post("/favoritePlayers", async (req, res, next) => {
 router.get("/favoritePlayers", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
-    let favorite_players = {};
-    const player_ids = await users_utils.getFavoritePlayers(user_id);
-    let player_ids_array = [];
-    player_ids.map((element) => player_ids_array.push(element.player_id)); //extracting the players ids into array
-    const results = await players_utils.getPlayersInfo(player_ids_array);
-    res.status(200).send(results);
+    let favorite_players = [];
+    const player_ids = await users_utils.getFavorite("favoritePlayers", user_id);
+    for (let i = 0; i < player_ids.length; i++){
+      const extra_details = await players_utils.get_extra_details(player_ids[i].playerid);
+      favorite_players.push(extra_details);
+    }
+    res.status(200).send(favorite_players);
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path gets body with teamID and save this player in the favorites list of the logged-in user
+ */
+router.post("/favoriteTeams", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const team_id = req.body.teamId;
+    await users_utils.markAsFavorite("favoriteTeams",user_id, team_id);
+    res.status(201).send("The team successfully saved as favorite");
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path returns the favorites teams that were saved by the logged-in user
+ */
+router.get("/favoriteTeams", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    let favorite_teams = [];
+    const team_ids = await users_utils.getFavorite("favoriteTeams", user_id);
+    for (let i = 0; i < team_ids.length; i++){
+      const extra_details = await players_utils.get_extra_details(team_ids[i].teamid);
+      favorite_teams.push(extra_details);
+    }
+    res.status(200).send(favorite_teams);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.post("/favoriteGames", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const game_id = req.body.gameId;
+    await users_utils.markAsFavorite("favoriteGames",user_id, game_id);
+    res.status(201).send("The game successfully saved as favorite");
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path returns the favorites teams that were saved by the logged-in user
+ */
+router.get("/favoriteGames", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    let favorite_games = [];
+    const games_ids = await users_utils.getFavorite("favoriteGames", user_id);
+    for (let i = 0; i < games_ids.length; i++){
+      const extra_details = await users_utils.getFavoritegameDetails(games_ids[i].gameid);
+      favorite_games.push(extra_details);
+    }
+    res.status(200).send(favorite_games);
   } catch (error) {
     next(error);
   }
