# project/routes/utils/users_utils.js
@@ -1,17 +1,25 @@
 const DButils = require("./DButils");
 
-async function markPlayerAsFavorite(user_id, player_id) {
+async function markAsFavorite(table, user_id, id) {
   await DButils.execQuery(
-    `insert into favoritePlayers values ('${user_id}',${player_id})`
+    `insert into ${table} values ('${user_id}',${id})`
   );
 }
 
-async function getFavoritePlayers(user_id) {
+async function getFavorite(table, user_id) {
   const player_ids = await DButils.execQuery(
-    `select top 3 playerid from favoritePlayers where userid='${user_id}'`
+    `select top 3 playerid from ${table} where userid='${user_id}'`
   );
   return player_ids;
 }
 
-exports.markPlayerAsFavorite = markPlayerAsFavorite;
-exports.getFavoritePlayers = getFavoritePlayers;
+async function getFavoritegameDetails(game_id) {
+  const game_details = await DButils.execQuery(`select * from dbo.Games where gameid='${game_id}'`
+  );
+  return game_details;
+}
+
+
+exports.markAsFavorite = markAsFavorite;
+exports.getFavorite = getFavorite;
+exports.getFavoritegameDetails= getFavoritegameDetails;
